# titanrcs

./: .clang-format  .gitignore  CMakeLists.txt  graph.ipynb  param_path.py  profilingcommand  todo
include/: buffers.h  cleanupdb.h  cleanupstack.h  commandpool.h  common.h  context.h  descriptors.h  device.h  instance.h  linalg.h  pipeline.h  render.h  renderpass.h  res.h  swapchain.h  sync.h
include/backend/: allocator.h  backend.h  device.h  fft.h  instance.h
include/interface/: int_render.h
include/rcs/: rcs.h  rcs_cmdbuf.h  rcs_computepass.h  rcs_descset.h  rcs_fb.h  rcs_imgs.h  rcs_mesh.h  rcs_pathing.h  rcs_pipeline.h  rcs_populate.h  rcs_render.h  rcs_renderpass.h  rcs_ubo.h
include/resources/: commandpool.h  renderresources.h  sync.h
include/swapchaincontext/: framebuffers.h  renderpass.h  swapchain.h  swapchaincontext.h
shaders/: comp.sh  nonhardcode.vert  shader.vert  uniforms.vert
shaders/interface/: comp.sh  frag1.frag  vert1.vert
shaders/rcs/: buftoimg.comp  comp.sh  frag1.frag  ildc.frag  imgtobuf.comp  po.frag  ptd_frag.frag  rcsfrag.glsl  reduction.comp  vert1.vert
shaders/rcs/fft/: buftoimg.comp  reduction.comp
shaders/rcs/sum/: downscalesum.comp  reduction.comp
src/: allocator.c  buffers.c  cleanup.c  commandpool.c  commandpool.h  common.h  descriptors.c  device.c  device.h  framebuffers.c  framebuffers.h  linalg.c  main.c  pipeline.c  pipeline.h  rcs_pipeline.c  render.c  renderpass.c  swapchain.c  swapchain.h  sync.c  vkfft.c  vma_impl.cpp
src/backend/: allocator.c  backend.c  device.c  fft.c  instance.c
src/rcs/: rcs.c  rcs_cmdbuf.c  rcs_computepass.c  rcs_descset.c  rcs_fb.c  rcs_imgs.c  rcs_mesh.c  rcs_pathing.c  rcs_pipeline.c  rcs_populate.c  rcs_render.c  rcs_renderpass.c  rcs_ubo.c
src/renderresources/: commandpool.c
src/resources/: commandpool.c  renderresources.c  sync.c
src/swapchaincontext/: framebuffers.c  renderpass.c  swapchain.c  swapchaincontext.c
